--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Helvetica", sans-serif;
+  font-family: "Monaco", monospace, sans-serif;
+  color: aquamarine;
 }
 html {
   height: 100%;
